fix secretary alignment

--- a/frontend/public/css/log.css
+++ b/frontend/public/css/log.css
@@ -377,11 +377,9 @@
     justify-content: space-between;
     background: #fff;
     border-radius: 12px;
-    padding: 10px 16px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
     width: 100%;
     box-sizing: border-box;
-    margin-top: 15px;
     border-style: solid;
     border-width: 1px;
     border-color: #eeeeee;
@@ -1091,7 +1089,8 @@
     cursor: pointer;
     padding: 0;
     width: 100px;
-    height: 32px;
+    /* height: 32px; */
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
